[package]
name = "fast_polynomial"
version = "0.4.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["polynomial", "horner", "estrin", "pade"]
categories = ["algorithms", "no-std"]
description = "Faster polynomial evaluation using Estrin's Scheme to exploit instruction-level parallelism"
include = ["src/**/*", "LICENSE", "README.md"]
readme = "README.md"
documentation = "https://docs.rs/fast_polynomial"
repository = "https://github.com/novacrazy/fast_polynomial"
rust-version = "1.81.0"

[features]
std = ["num-traits/std"]
libm = ["num-traits/libm"]

[dependencies]
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5.1"

[[bench]]
name = "main"
path = "benches/main.rs"
harness = false

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1

[profile.bench]
opt-level = 3
lto = 'fat'
codegen-units = 1
